# pyside6_qml_template

./: .gitignore  BASE_DIR_PYTHON  README.md  main.py  pyproject.toml  pyside6_qml_template.pro  resources.qrc  setup.venv.bat  start.app.bat
app/backend/: __init__.py
app/backend/datasimulator/: DataSimulatorManager.py  DataSimulatorManagerProps.py
app/backend/mousetools/: MaskedMouseArea.py  MaskedMouseAreaProps.py
app/backend/watchdog/: WatchdogManager.py
app/frontend/: __init__.py
app/frontend/content/: ContentManager.py  ContentManagerProps.py
app/utils/: app_logger.py  app_paths.py  error_codes.py  logging_config.json  qml_generic_object.py  qml_tools.py
qml/: main.qml
qml/Backend/: DataSimulatorBackend.qml  WatchdogBackend.qml
qml/Components/Buttons/: ImageButton.qml
qml/Frontend/: ContentFrontend.qml
qml/Pages/: MainPage.qml  SubPage01.qml
qml/PopupScreens/: ErrorPopup.qml
scripts/: setup.venv.ps1  start.app.ps1
