[tool.poetry]
name = "pyside6_qml_template"
version = "0.1.0"
description = ""
authors = ["Gerben Plijter <ggplijter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
PySide6 = "~6.6.2"
pip = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
